--- a/app/src/main/res/layout/chat_send_msg_item.xml
+++ b/app/src/main/res/layout/chat_send_msg_item.xml
@@ -78,7 +78,6 @@
                     android:id="@+id/image_view"
                     android:layout_width="160dp"
                     android:layout_height="90dp"
-                    tools:visibility="visible"
                     android:visibility="gone"
                     android:scaleType="centerCrop"
                     android:src="@drawable/pic_1"/>
@@ -86,6 +85,7 @@
                 <!--声音类型的消息-->
                 <LinearLayout
                     android:id="@+id/voice_View"
+                    tools:visibility="visible"
                     android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -96,8 +96,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:textSize="@dimen/size_18sp"
-                        android:textColor="@color/white"
+                        android:textSize="@dimen/size_15sp"
+                        android:textColor="#afffffff"
                         android:padding="@dimen/dimen_5dp"
                         android:text="10''"/>
 
@@ -106,9 +106,9 @@
                         android:padding="@dimen/dimen_7dp"
                         android:layout_width="@dimen/dimen_48dp"
                         android:layout_height="@dimen/dimen_48dp"
-                        android:src="@drawable/ic_phone_no_talk_1_48dp"/>
-
-
+                        android:rotation="180"
+                        android:tint="#afffffff"
+                        android:src="@drawable/ic_voice_on_24dp"/>
 
                 </LinearLayout>
 
