--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -41,66 +41,45 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:elevation="@dimen/dimen_2dp"
-                android:minHeight="?attr/actionBarSize"
+                android:minHeight="@dimen/dimen_56dp"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:orientation="vertical">
+                <RelativeLayout
+                    android:id="@+id/btn_voice_and_keyboard"
+                    android:layout_width="@dimen/dimen_60dp"
+                    android:layout_height="@dimen/dimen_56dp"
+                    android:layout_marginLeft="@dimen/dimen_5dp"
+                    android:layout_gravity="bottom">
 
-                    <!--floatingActionButton-->
-                    <android.support.design.widget.FloatingActionButton
-                        android:id="@+id/fab_emotion"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/dimen_8dp"
-                        android:layout_marginLeft="@dimen/dimen_5dp"
-                        android:layout_marginRight="@dimen/dimen_5dp"
-                        android:layout_marginTop="@dimen/dimen_5dp"
-                        android:src="@drawable/ic_smile_24dp"
-                        android:tint="@color/colorAccent"
-                        android:visibility="gone"
-                        app:backgroundTint="@color/white"
-                        app:fabSize="mini"
-                        app:rippleColor="@color/colorAccent"/>
+                    <ImageView
+                        android:id="@+id/voice_View"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:padding="@dimen/dimen_7dp"
+                        android:layout_centerInParent="true"
+                        tools:visibility="gone"
+                        android:src="@drawable/ic_voice_24dp"
+                        android:background="@drawable/ic_stroke_circle_background"/>
 
+                    <ImageView
+                        android:id="@+id/keyboard_view"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_keyboard_24dp"
+                        tools:visibility="visible"
+                        android:padding="7dp"
+                        android:background="@drawable/ic_stroke_circle_background"
+                        android:visibility="gone"/>
 
-                    <FrameLayout
-                        android:id="@+id/btn_voice_and_keyboard"
-                        android:layout_width="@dimen/dimen_40dp"
-                        android:layout_height="@dimen/dimen_40dp"
-                        android:layout_gravity="bottom">
+                </RelativeLayout>
 
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/voice_View"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginBottom="@dimen/dimen_5dp"
-                            android:layout_marginLeft="@dimen/dimen_5dp"
-                            android:src="@drawable/ic_voice_24dp"
-                            app:civ_border_color="@color/colorAccent"
-                            app:civ_border_width="1dp"/>
-
-                        <ImageView
-                            android:id="@+id/keyboard_view"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="@dimen/dimen_5dp"
-                            android:src="@drawable/ic_keyboard_24dp"
-                            android:visibility="gone"/>
-
-                    </FrameLayout>
-
-                </LinearLayout>
-
-
-                <FrameLayout
+                <RelativeLayout
                     android:id="@+id/input_text_and_voice"
+                    android:layout_marginLeft="@dimen/dimen_5dp"
+                    android:layout_marginRight="@dimen/dimen_5dp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
                     android:layout_weight="1">
 
                     <EditText
@@ -108,79 +87,67 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="输入文本信息"
+                        tools:visibility="gone"
+                        android:layout_marginTop="@dimen/dimen_8dp"
+                        android:layout_marginBottom="@dimen/dimen_8dp"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/ic_input_background"
+                        android:minHeight="@dimen/dimen_40dp"
                         android:maxLines="10"
                         android:paddingLeft="@dimen/dimen_5dp"
                         android:paddingRight="@dimen/dimen_5dp"
                         android:textSize="@dimen/size_15sp"/>
 
-                    <android.support.v7.widget.CardView
+                    <com.example.jinphy.simplechat.custom_view.AudioRecordButton
                         android:id="@+id/input_voice"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/dimen_40dp"
-                        android:layout_marginBottom="@dimen/dimen_5dp"
-                        android:layout_marginLeft="@dimen/dimen_5dp"
+                        android:clickable="true"
+                        android:focusable="true"
                         android:visibility="gone"
-                        app:cardBackgroundColor="@color/colorAccent"
-                        app:cardCornerRadius="@dimen/dimen_3dp"
-                        app:cardElevation="@dimen/dimen_2dp">
+                        tools:visibility="visible"
+                        android:layout_marginTop="@dimen/dimen_8dp"
+                        android:layout_marginBottom="@dimen/dimen_8dp"
+                        android:elevation="@dimen/dimen_1dp"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/ic_stroke_accent_rectangle"
+                        android:gravity="center"
+                        android:text="按住，讲话"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="@dimen/size_18sp"/>
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="@dimen/dimen_1dp"
-                            android:background="@drawable/btn_background"
-                            android:clickable="true"
-                            android:gravity="center"
-                            android:text="按住，讲话"
-                            android:textColor="@color/colorAccent"
-                            android:textSize="@dimen/size_18sp"/>
+                </RelativeLayout>
 
-                    </android.support.v7.widget.CardView>
-
-                </FrameLayout>
-
-                <FrameLayout
+                <RelativeLayout
                     android:id="@+id/btn_more_and_send"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/dimen_5dp"
                     android:layout_gravity="bottom"
-                    android:layout_marginBottom="@dimen/dimen_5dp"
-                    android:layout_marginLeft="@dimen/dimen_5dp"
-                    android:layout_marginRight="@dimen/dimen_5dp">
+                    android:layout_width="@dimen/dimen_60dp"
+                    android:layout_height="@dimen/dimen_56dp">
 
-                    <de.hdodenhof.circleimageview.CircleImageView
+                    <ImageView
                         android:id="@+id/more_view"
                         android:layout_width="@dimen/dimen_40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginRight="@dimen/dimen_5dp"
+                        android:layout_height="@dimen/dimen_40dp"
+                        android:padding="@dimen/dimen_7dp"
+                        android:layout_centerInParent="true"
                         android:clickable="true"
                         android:src="@drawable/ic_add_24dp"
-                        app:civ_border_color="@color/colorAccent"
-                        app:civ_border_width="1dp"/>
+                        android:background="@drawable/ic_stroke_circle_background"/>
 
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/send_view_parent"
-                        android:layout_width="60dp"
-                        android:layout_height="43dp"
+                    <TextView
+                        android:id="@+id/send_view"
+                        android:layout_width="@dimen/dimen_55dp"
+                        android:layout_height="@dimen/dimen_40dp"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/ic_rectangle_accent_background"
                         android:clickable="true"
+                        android:gravity="center"
                         android:visibility="gone"
-                        app:cardBackgroundColor="@color/white"
-                        app:cardCornerRadius="@dimen/dimen_3dp"
-                        app:cardElevation="@dimen/dimen_2dp">
+                        android:text="发送"
+                        android:textColor="@color/colorAccent"/>
 
-                        <TextView
-                            android:id="@+id/send_view"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@drawable/pic_chat_send_btn"
-                            android:clickable="true"
-                            android:gravity="center"
-                            android:text="发送"
-                            android:textColor="@color/white"/>
-
-                    </android.support.v7.widget.CardView>
-
-                </FrameLayout>
+                </RelativeLayout>
 
 
             </LinearLayout>
