--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,4 +43,5 @@
     <dimen name="dimen_45dp">45dp</dimen>
     <dimen name="dimen_35dp">35dp</dimen>
     <dimen name="dimen_43dp">43dp</dimen>
+    <dimen name="dimen_56dp">56dp</dimen>
 </resources>
