--- a/app/src/main/res/layout/chat_send_msg_item.xml
+++ b/app/src/main/res/layout/chat_send_msg_item.xml
@@ -85,7 +85,6 @@
                 <!--声音类型的消息-->
                 <LinearLayout
                     android:id="@+id/voice_View"
-                    tools:visibility="visible"
                     android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -142,13 +141,44 @@
                 </RelativeLayout>
 
                 <!--文件类型的消息-->
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/file_view"
-                    android:gravity="start"
                     android:visibility="gone"
-                    android:orientation="horizontal"
+                    tools:visibility="visible"
                     android:layout_width="248dp"
                     android:layout_height="80dp">
+
+                    <HorizontalScrollView
+                        android:id="@+id/file_name_scroll_view"
+                        android:scrollbars="none"
+                        android:overScrollMode="never"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="160dp"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/file_name_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="end"
+                            android:gravity="end"
+                            android:padding="@dimen/dimen_10dp"
+                            tools:text="Simple_Chat.apk"
+                            android:textColor="#7fffffff"
+                            android:textSize="@dimen/size_15sp"/>
+                    </HorizontalScrollView>
+
+                    <TextView
+                        android:id="@+id/file_size_text"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/dimen_10dp"
+                        android:layout_marginBottom="@dimen/dimen_10dp"
+                        tools:text="3.54 MB"
+                        android:textSize="13sp"
+                        android:textColor="#7fffffff"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
                     <ImageView
                         android:layout_gravity="center_vertical"
                         android:padding="@dimen/dimen_5dp"
@@ -157,19 +187,7 @@
                         android:layout_height="80dp"/>
 
 
-                    <TextView
-                        android:id="@+id/file_name_text"
-                        android:layout_width="0dp"
-                        android:layout_gravity="center_vertical"
-                        android:padding="@dimen/dimen_10dp"
-                        android:layout_height="match_parent"
-                        android:text="Simple_Chat.apk"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/size_18sp"
-                        android:layout_weight="1"/>
-
-
-                </LinearLayout>
+                </RelativeLayout>
 
             </LinearLayout>
 
