--- a/app/src/main/res/layout/layout_header_view.xml
+++ b/app/src/main/res/layout/layout_header_view.xml
@@ -12,19 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <ImageView
             android:id="@+id/btn_cancel"
-            android:layout_width="56dp"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/cancel_view"
-                android:src="@drawable/ic_arrow_gray_24dp"
-                android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        </RelativeLayout>
+            android:src="@drawable/ic_arrow_gray_24dp"
+            android:padding="@dimen/dimen_12dp"
+            android:background="@drawable/ic_click_background"
+            android:layout_width="@dimen/dimen_56dp"
+            android:layout_height="@dimen/dimen_56dp"/>
 
         <TextView
             android:id="@+id/title_view"
@@ -38,20 +32,16 @@
             android:layout_height="wrap_content"/>
 
 
-        <RelativeLayout
+        <TextView
             android:id="@+id/btn_confirm"
+            android:text="确定"
+            android:gravity="center"
+            android:textColor="@color/green_primary"
             android:layout_alignParentRight="true"
-            android:layout_width="56dp"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/confirm_view"
-                android:text="确定"
-                android:gravity="center"
-                android:textColor="@color/green_primary"
-                android:layout_centerInParent="true"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        </RelativeLayout>
+            android:background="@drawable/ic_click_background"
+            android:minWidth="@dimen/dimen_56dp"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_56dp"/>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
