--- a/app/src/main/res/layout/layout_member_list_item.xml
+++ b/app/src/main/res/layout/layout_member_list_item.xml
@@ -84,6 +84,7 @@
 
         <CheckBox
             android:id="@+id/check_box"
+            android:clickable="false"
             android:layout_centerInParent="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/dimen_10dp"
