--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -34,6 +34,5 @@
             app:layout_anchorGravity="bottom|right|end"/>
     </android.support.design.widget.CoordinatorLayout>
 
-    <include
-        layout="@layout/layout_appbar"/>
+    <include layout="@layout/layout_appbar"/>
 </FrameLayout>
