--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -163,292 +163,40 @@
 
             </LinearLayout>
 
-
-            <!--更多功能的布局-->
-            <LinearLayout
-                android:id="@+id/more_layout"
+            <FrameLayout
+                android:id="@+id/bottom_extra_view"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:background="@color/background"
-                android:clickable="true"
-                android:focusable="true"
-                android:columnCount="4"
-                android:orientation="vertical"
-                android:padding="@dimen/dimen_10dp"
-                android:rowCount="2"
-                android:visibility="gone"
-                tools:visibility="visible">
-                <!--第一行-->
-                <LinearLayout
+                android:layout_height="wrap_content">
+
+                <!--更多功能的布局-->
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/more_menu"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_0dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
+                    android:layout_height="250dp"
+                    android:background="@color/background"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:columnCount="4"
+                    android:overScrollMode="never"
+                    android:orientation="vertical"
+                    android:padding="@dimen/dimen_10dp"
+                    android:rowCount="2"
+                    android:visibility="gone"
+                    tools:visibility="visible"/>
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/dimen_5dp"
-                        android:layout_marginRight="@dimen/dimen_5dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/item_photo"
-                            android:background="@drawable/ic_rectangle_white_background"
-                            android:elevation="@dimen/dimen_1dp"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:src="@drawable/ic_photo_24dp"
-                            android:padding="@dimen/dimen_15dp"
-                            android:layout_width="@dimen/dimen_60dp"
-                            android:layout_height="@dimen/dimen_60dp"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dimen_10dp"
-                            android:text="图片"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/dimen_5dp"
-                        android:layout_marginRight="@dimen/dimen_5dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/item_file"
-                            android:background="@drawable/ic_rectangle_white_background"
-                            android:elevation="@dimen/dimen_1dp"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:src="@drawable/ic_folder_2_24dp"
-                            android:padding="@dimen/dimen_15dp"
-                            android:layout_width="@dimen/dimen_60dp"
-                            android:layout_height="@dimen/dimen_60dp"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dimen_10dp"
-                            android:text="文件"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/dimen_5dp"
-                        android:layout_marginRight="@dimen/dimen_5dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:background="@drawable/ic_rectangle_white_background"
-                            android:elevation="@dimen/dimen_1dp"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:src="@drawable/ic_photo_24dp"
-                            android:padding="@dimen/dimen_15dp"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_width="@dimen/dimen_60dp"
-                            android:layout_height="@dimen/dimen_60dp"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_marginTop="@dimen/dimen_10dp"
-                            android:text="图片"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/dimen_5dp"
-                        android:layout_marginRight="@dimen/dimen_5dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:background="@drawable/ic_rectangle_white_background"
-                            android:elevation="@dimen/dimen_1dp"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:src="@drawable/ic_photo_24dp"
-                            android:padding="@dimen/dimen_15dp"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_width="@dimen/dimen_60dp"
-                            android:layout_height="@dimen/dimen_60dp"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_marginTop="@dimen/dimen_10dp"
-                            android:text="图片"/>
-
-                    </LinearLayout>
+                <!--表情布局，该功能暂时废弃-->
+                <LinearLayout
+                    android:id="@+id/emotion_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                 </LinearLayout>
 
-                <!--第二行-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_0dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
+            </FrameLayout>
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/dimen_5dp"
-                        android:layout_marginRight="@dimen/dimen_5dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
 
-                        <ImageView
-                            android:background="@drawable/ic_rectangle_white_background"
-                            android:elevation="@dimen/dimen_1dp"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:src="@drawable/ic_photo_24dp"
-                            android:padding="@dimen/dimen_15dp"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_width="@dimen/dimen_60dp"
-                            android:layout_height="@dimen/dimen_60dp"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_marginTop="@dimen/dimen_10dp"
-                            android:text="图片"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/dimen_5dp"
-                        android:layout_marginRight="@dimen/dimen_5dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:background="@drawable/ic_rectangle_white_background"
-                            android:elevation="@dimen/dimen_1dp"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:src="@drawable/ic_photo_24dp"
-                            android:padding="@dimen/dimen_15dp"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_width="@dimen/dimen_60dp"
-                            android:layout_height="@dimen/dimen_60dp"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_marginTop="@dimen/dimen_10dp"
-                            android:text="图片"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/dimen_5dp"
-                        android:layout_marginRight="@dimen/dimen_5dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:background="@drawable/ic_rectangle_white_background"
-                            android:elevation="@dimen/dimen_1dp"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:src="@drawable/ic_photo_24dp"
-                            android:padding="@dimen/dimen_15dp"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_width="@dimen/dimen_60dp"
-                            android:layout_height="@dimen/dimen_60dp"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_marginTop="@dimen/dimen_10dp"
-                            android:text="图片"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="@dimen/dimen_5dp"
-                        android:layout_marginRight="@dimen/dimen_5dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:background="@drawable/ic_rectangle_white_background"
-                            android:elevation="@dimen/dimen_1dp"
-                            android:clickable="true"
-                            android:focusable="true"
-                            android:src="@drawable/ic_photo_24dp"
-                            android:padding="@dimen/dimen_15dp"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_width="@dimen/dimen_60dp"
-                            android:layout_height="@dimen/dimen_60dp"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:visibility="gone"
-                            tools:visibility="visible"
-                            android:layout_marginTop="@dimen/dimen_10dp"
-                            android:text="图片"/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <!--表情布局，该功能暂时废弃-->
-            <LinearLayout
-                android:id="@+id/emotion_layout"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-            </LinearLayout>
 
         </LinearLayout>
 
