--- a/app/src/main/res/layout/fragment_self.xml
+++ b/app/src/main/res/layout/fragment_self.xml
@@ -10,6 +10,7 @@
         android:id="@+id/scroll_view"
         android:layout_marginTop="@dimen/tool_bar_height"
         android:layout_marginBottom="@dimen/tool_bar_height"
+        android:overScrollMode="never"
         android:translationY="244dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
