--- a/app/src/main/res/layout/fragment_show_file.xml
+++ b/app/src/main/res/layout/fragment_show_file.xml
@@ -31,9 +31,12 @@
         />
 
     <LinearLayout
+        android:id="@+id/btn_file"
         android:orientation="vertical"
         android:layout_centerInParent="true"
         android:background="@drawable/ic_rectangle_white_background"
+        android:clickable="true"
+        android:focusable="true"
         android:elevation="@dimen/dimen_1dp"
         android:paddingLeft="@dimen/dimen_10dp"
         android:paddingRight="@dimen/dimen_10dp"
@@ -53,13 +56,13 @@
             android:scrollbars="none"
             android:overScrollMode="never"
             android:layout_width="150dp"
+            android:layout_marginLeft="@dimen/dimen_10dp"
+            android:layout_marginRight="@dimen/dimen_10dp"
             android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/file_path_view"
-                android:layout_gravity="center_horizontal"
                 tools:text="/storage/emulated/0/Download/test.txt"
-                android:layout_margin="@dimen/dimen_10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </HorizontalScrollView>
