--- a/app/src/main/res/layout/layout_new_member_item.xml
+++ b/app/src/main/res/layout/layout_new_member_item.xml
@@ -14,6 +14,7 @@
     app:cardCornerRadius="3dp">
 
     <RelativeLayout
+        android:background="@drawable/btn_alpha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
